[package]
name = "random-background"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
clap = { version = "4.3.21", features = ["derive"] }
divrem = "1.0.0"
env_logger = "0.10.0"
image = "0.24.6"
imageproc = "0.23.0"
log = "0.4.19"
now = "0.1.3"
rand = "0.8.5"
rusttype = "0.9.3"
serde = { version = "1.0.183", features = ["derive"] }
toml = "0.7.6"
wallpaper = "3.2.0"
